fix(hero): adjust alignment and add padding for improved layout

--- a/source/styles/blocks/hero.scss
+++ b/source/styles/blocks/hero.scss
@@ -207,7 +207,7 @@
     display: grid;
     grid-template-columns: 600px 625px;
     gap: 30px;
-    align-items: center;
+    align-items: start;
   }
 
   .hero__image-wrapper {
@@ -224,6 +224,7 @@
     order: 0;
     width: 625px;
     margin: 0;
+    padding-top: 150px;
     text-align: left;
   }
 
